// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer renders only confirm button when endDateData does NOT include price.value 1`] = `
.emotion-6 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 300ms linear;
  -webkit-transition: transform 300ms linear;
  transition: transform 300ms linear;
  width: 100%;
  position: fixed;
  bottom: 0;
  background-color: #fff;
  font-family: "Ciutadella",sans-serif;
}

.emotion-5 {
  padding: 15px;
  width: 100%;
  max-width: 1030px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media only screen and (min-width:321px) {
  .emotion-3 {
    padding-right: 15px;
  }
}

.emotion-2 {
  border-bottom: 1px solid #eeeeee;
  -webkit-transition: -webkit-transform 300ms linear;
  -webkit-transition: transform 300ms linear;
  transition: transform 300ms linear;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  box-shadow: 0 -4px 6px 0 rgba(0,0,0,0.08);
  width: 100%;
  background-color: #fff;
}

.emotion-1 {
  padding: 7.5px 15px;
  width: 100%;
  max-width: 1030px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    display: block;
  }
}

.emotion-0 {
  font-size: 0.875rem;
  line-height: 1.29;
  color: #323232;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    margin-right: 5px;
    font-size: 1rem;
  }
}

.emotion-4 {
  background-color: #ee0000;
  color: #fff;
  font-family: "Ciutadella",sans-serif;
  font-size: 1rem;
  width: 100%;
  height: 3.125rem;
  border-radius: 4px;
  border-width: 0;
  padding: 14px 24px 15px;
  font-weight: 700;
  line-height: 1.56;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-letter-spacing: 1.5px;
  -moz-letter-spacing: 1.5px;
  -ms-letter-spacing: 1.5px;
  letter-spacing: 1.5px;
  height: 48px;
  width: 100px;
  border-radius: 4px;
  border-width: 0px;
  padding: 2px 0 0 3px;
}

.emotion-4:hover {
  background-color: #ba0000;
}

.emotion-4:active {
  background-color: #ba0000;
}

.emotion-4:active {
  -webkit-transform: translate(1px,1px);
  -ms-transform: translate(1px,1px);
  transform: translate(1px,1px);
}

<Footer
  actionText="CONFIRM"
  bottomFooterDisclaimer="+ $34.90^"
  bottomFootersummaryLabel="From "
  endDateData={
    Object {
      "currencySymbol": "€",
      "price": null,
    }
  }
  onActionButtonClick={[Function]}
  pointsLabel=""
  preFooterDisclaimer="^ Taxes, fees and carrier charges. Limited avaliability"
  preFooterInfo="Lowest economy price per adult in AUD for a return trip."
  priceInPoints={false}
  showBottomFooter={true}
  showPreFooter={true}
>
  <Transition
    appear={false}
    enter={true}
    exit={true}
    in={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={300}
    unmountOnExit={false}
  >
    <div
      className="emotion-6"
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={true}
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={300}
        unmountOnExit={false}
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-1"
          >
            <span
              className="emotion-0"
            >
              Lowest economy price per adult in AUD for a return trip.
            </span>
          </div>
        </div>
      </Transition>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-3"
        />
        <div>
          <Button
            className={null}
            cssOverrides={
              Array [
                Object {
                  "borderRadius": "4px",
                  "borderWidth": "0",
                  "height": "48px",
                  "letterSpacing": "1.5px",
                  "padding": "2px 0 0 3px",
                  "width": "100px",
                },
              ]
            }
            label="CONFIRM"
            onClick={[Function]}
            variant="solid"
          >
            <div
              className={null}
            >
              <button
                className="emotion-4"
                onClick={[Function]}
                type="button"
              >
                CONFIRM
              </button>
            </div>
          </Button>
        </div>
      </div>
    </div>
  </Transition>
</Footer>
`;

exports[`Footer renders preFooterDisclaimer and bottom footer text contents when endDateData includes price.value 1`] = `
.emotion-8 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 300ms linear;
  -webkit-transition: transform 300ms linear;
  transition: transform 300ms linear;
  width: 100%;
  position: fixed;
  bottom: 0;
  background-color: #fff;
  font-family: "Ciutadella",sans-serif;
}

.emotion-7 {
  padding: 15px;
  width: 100%;
  max-width: 1030px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media only screen and (min-width:321px) {
  .emotion-5 {
    padding-right: 15px;
  }
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.56;
}

@media only screen and (min-width:768px) {
  .emotion-4 {
    font-size: 1.375rem;
  }
}

.emotion-3 {
  color: #323232;
  font-weight: 700;
  margin: 0 5px;
}

.emotion-2 {
  border-bottom: 1px solid #eeeeee;
  -webkit-transition: -webkit-transform 300ms linear;
  -webkit-transition: transform 300ms linear;
  transition: transform 300ms linear;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  box-shadow: 0 -4px 6px 0 rgba(0,0,0,0.08);
  width: 100%;
  background-color: #fff;
}

.emotion-1 {
  padding: 7.5px 15px;
  width: 100%;
  max-width: 1030px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    display: block;
  }
}

.emotion-0 {
  font-size: 0.875rem;
  line-height: 1.29;
  color: #323232;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    margin-right: 5px;
    font-size: 1rem;
  }
}

.emotion-6 {
  background-color: #ee0000;
  color: #fff;
  font-family: "Ciutadella",sans-serif;
  font-size: 1rem;
  width: 100%;
  height: 3.125rem;
  border-radius: 4px;
  border-width: 0;
  padding: 14px 24px 15px;
  font-weight: 700;
  line-height: 1.56;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-letter-spacing: 1.5px;
  -moz-letter-spacing: 1.5px;
  -ms-letter-spacing: 1.5px;
  letter-spacing: 1.5px;
  height: 48px;
  width: 100px;
  border-radius: 4px;
  border-width: 0px;
  padding: 2px 0 0 3px;
}

.emotion-6:hover {
  background-color: #ba0000;
}

.emotion-6:active {
  background-color: #ba0000;
}

.emotion-6:active {
  -webkit-transform: translate(1px,1px);
  -ms-transform: translate(1px,1px);
  transform: translate(1px,1px);
}

<Footer
  actionText="CONFIRM"
  bottomFooterDisclaimer="+ $34.90^"
  bottomFootersummaryLabel="From "
  endDateData={
    Object {
      "currencySymbol": "€",
      "price": Object {
        "value": 3000,
      },
    }
  }
  onActionButtonClick={[Function]}
  pointsLabel=""
  preFooterDisclaimer="^ Taxes, fees and carrier charges. Limited avaliability"
  preFooterInfo="Lowest economy price per adult in AUD for a return trip."
  priceInPoints={false}
  showBottomFooter={true}
  showPreFooter={true}
>
  <Transition
    appear={false}
    enter={true}
    exit={true}
    in={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={300}
    unmountOnExit={false}
  >
    <div
      className="emotion-8"
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={true}
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={300}
        unmountOnExit={false}
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-1"
          >
            <span
              className="emotion-0"
            >
              Lowest economy price per adult in AUD for a return trip.
            </span>
          </div>
        </div>
      </Transition>
      <div
        className="emotion-7"
      >
        <div
          className="emotion-5"
        >
          <span
            className="emotion-4"
          >
            From 
            <span
              className="emotion-3"
            >
              <span>
                €3,000.00
              </span>
            </span>
          </span>
        </div>
        <div>
          <Button
            className={null}
            cssOverrides={
              Array [
                Object {
                  "borderRadius": "4px",
                  "borderWidth": "0",
                  "height": "48px",
                  "letterSpacing": "1.5px",
                  "padding": "2px 0 0 3px",
                  "width": "100px",
                },
              ]
            }
            label="CONFIRM"
            onClick={[Function]}
            variant="solid"
          >
            <div
              className={null}
            >
              <button
                className="emotion-6"
                onClick={[Function]}
                type="button"
              >
                CONFIRM
              </button>
            </div>
          </Button>
        </div>
      </div>
    </div>
  </Transition>
</Footer>
`;

exports[`Footer renders with defaults 1`] = `
<Transition
  appear={false}
  enter={true}
  exit={true}
  in={false}
  mountOnEnter={false}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={300}
  unmountOnExit={false}
>
  <Component />
</Transition>
`;

exports[`Footer renders with props provided 1`] = `
<Transition
  appear={false}
  enter={true}
  exit={true}
  in={false}
  mountOnEnter={false}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={300}
  unmountOnExit={false}
>
  <Component />
</Transition>
`;
